--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
-  mrdevopsmongodb:
+  mongodblink:
     image: mongo:latest
-    container_name: "mrdevopsmongodb"
+    container_name: "mongodblink"
     ports:
       - 27017:27017
   springboot-mongodb:
@@ -11,4 +11,4 @@ services:
     ports:
       - 8080:8080
     links:
-      - mrdevopsmongodb
+      - mongodblink
